# openaur

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASING.md  USAGE.md  aura-pkg-add.sh  docker-compose.yml  index.html  install.sh  openaur  pyproject.toml  requirements.txt
.github/workflows/: release.yml
actions/manifests/: [.yaml  echo.yaml  git.yaml  ls.yaml  pwd.yaml
apps/dashboard/: Dockerfile  README.md  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
apps/dashboard/src/: app.css  app.html
apps/dashboard/src/routes/: +layout.svelte  +page.svelte
apps/dashboard/src/routes/agents/: +page.svelte
apps/dashboard/src/routes/config/: +page.svelte
apps/dashboard/src/routes/heart/: +page.svelte
apps/dashboard/src/routes/memory/: +page.svelte
apps/dashboard/src/routes/sessions/: +page.svelte
docs/: index.html
scripts/: preload_memory.py  setup-openmemory-dashboard.sh
src/: cli.py  config.py  constants.py  dependencies.py  exceptions.py  main.py
src/models/: database.py  responses.py  schemas.py
src/routes/: actions.py  agents.py  chat.py  config.py  dashboard.py  emails.py  heart.py  ingest.py  memory.py  memory_ui.py  openai.py  packages.py  sessions.py  settings.py  websocket.py
src/services/: agents.py  analysis_engine.py  context_manager.py  doc_crawler.py  email_ingestion.py  empathy.py  gateway.py  openmemory.py  openrouter_client.py  package_manager.py  tmux_executor.py  two_stage_processor.py  websocket_manager.py
src/utils/: yaml_registry.py
